prevent extra whitespace

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,6 +93,7 @@ ul {
 }
 
 .bookmark {
+  display: block;
   overflow: hidden;
 }
 .bookmark__link {
